// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options config must be in rootDir/process.cwd() 1`] = `
{
  "exitCode": 1,
  "message": "backtrack config not found",
}
`;

exports[`options handles custom searchPath 1`] = `
{
  "presets": [
    "module_exports",
  ],
}
`;

exports[`options handles module.exports - .backtrackrc.js 1`] = `
{
  "presets": [
    "module_exports_rc",
  ],
}
`;

exports[`options handles module.exports 1`] = `
{
  "presets": [
    "module_exports",
  ],
}
`;

exports[`options loads ES Modules config 1`] = `
{
  "presets": [
    "es_modules",
  ],
}
`;

exports[`options throws if ES Modules without default 1`] = `
{
  "exitCode": 1,
  "message": "<PROJECT_ROOT>/backtrack.config.js must use default export with ES Modules",
}
`;

exports[`options throws on missing config 1`] = `
{
  "exitCode": 1,
  "message": "backtrack config not found",
}
`;
